--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+loom link --> https://www.loom.com/share/840d6b0afa3e430092e75b61d2c759b4?sid=a36f986c-6f8e-49ee-82bc-ac5fc8acade5
+
+vecel link --> https://swift-dashboard-azw5.vercel.app/
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
